syntax="proto3";

package genproto;
option go_package="genproto/position_service";

message Attribute {
    string id = 1;
    string name = 2;
	string attribute_types = 3;
}

message CreateAttribute {
    string name = 1;
	string attribute_types = 2;
}

message AttributeId {
	string id = 1;
}

message GetAllAttributeRequest {
    uint32 limit = 1;
    uint32 offset = 2;
    string name = 3;
}

message GetAllAttributeResponse {
    repeated Attribute attributes = 1;
    uint32 count = 2;
}

message UpdateAttribute {
    string resp = 1;
}




